Fix: Remove whitespace below footer

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -52,7 +52,7 @@ span {
   cursor: pointer;
 }
 
-section {
+.getArtWork {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding: 100px 10%;
@@ -95,25 +95,27 @@ button {
   cursor: pointer;
 }
 
-.CardNumber{
+.CardNumber {
   margin-left: 5px;
   font-weight: 600;
   color: #664747;
 }
 
-.FootageSide{
+.FootageSide {
+  position: fixed;
+  bottom: 0;
   padding: 10px 20%;
   text-align: center;
-  display : flex;
+  display: flex;
   background-color: #cfc5c5;
   width: 100%;
-  
 }
 
 .FootageSide p {
-  width : 200%;
+  width: 200%;
   text-align: center;
 }
+
 /* Responsive styles for screen width <= 480px */
 
 @media only screen and (width <= 480px) {
@@ -136,7 +138,7 @@ button {
     height: auto;
   }
 
-  section {
+  .getArtWork {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     padding: 100px 0%;
